--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,11 @@
         }
     },
     "autoload": {
+      "files":{
+        "app/constants.php",
+        "app/helpers.php",
+        "app/language_helper.php"
+     },
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
