--- a/composer.json
+++ b/composer.json
@@ -36,11 +36,7 @@
         }
     },
     "autoload": {
-      "files":{
-        "app/constants.php",
-        "app/helpers.php",
-        "app/language_helper.php"
-     },
+        "files": ["app/helpers.php"],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
